--- a/public_html/kecske.css
+++ b/public_html/kecske.css
@@ -9,3 +9,15 @@ main{
     max-width: 800px;
     margin: auto;
 }
+
+
+footer p{
+    text-align: center;
+    font-size: 20px;
+    background-color: lightblue;
+}
+
+.kiemel{
+    border: 2pt solid red;
+    cursor: grab;
+}
