--- a/public_html/kecske.css
+++ b/public_html/kecske.css
@@ -1,11 +1,40 @@
 @charset "utf-8";
 
-main, header, aside, footer{
+main, header, aside, article, footer{
     border: 1px solid grey;
-    padding: 10px;
+    margin: 10px;
+    padding: 2px;
 }
 
 main{
     max-width: 800px;
     margin: auto;
 }
+
+aside img{
+    width: 50px;
+}
+
+aside img:nth-child(3){
+    width: 70px;
+}
+
+main{
+    display: grid;
+    grid-template-areas:
+        "h h h"
+        "b cs j"
+        "f f f";
+}
+
+header{grid-area: h;}
+#bal{grid-area: b;}
+
+article{
+    grid-area: cs;
+    background-color: lightblue;
+    text-align: center;
+}
+
+#jobb{grid-area: j;}
+footer{grid-area: f;}
